--- a/client/components/visit/visit.html
+++ b/client/components/visit/visit.html
@@ -42,7 +42,7 @@
       <div class="form-group col-sm-2">
         <label class="control-label">Overall impression</label>
         <div class="rating">
-          <uib-rating name="visitGeneralRating" ng-model="vm.visit.general.rating" data-readonly="vm.visit.closed"></uib-rating>
+          <span uib-rating name="visitGeneralRating" ng-model="vm.visit.general.rating" data-readonly="vm.visit.closed"></span>
         </div>
       </div>
     </div>
@@ -180,7 +180,7 @@
             <option value="1">1 month</option>
             <option value="2">2 months</option>
             <option value="3">3 months</option>
-            <option value="4">4+ months</option>
+            <option value="4">4+ months</option>r
           </select>
         </div>
       </div>
